front-chart/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-app
  labels:
    application: front-app
spec:
  replicas: 2
  selector:
    matchLabels:
      application: front-app
  template:
    metadata:
      name: front-app
      labels:
        application: front-app
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                topologyKey: topology.kubernetes.io/zone
      containers:
        - name: front-app
          image: sammmmmm/front-app:1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 80
