front-chart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-app
  namespace: project-devops
spec:
  selector:
    application: front-app
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 80
  type: ClusterIP
