front-chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: front-app
  namespace: project-devops
spec:
  ingressClassName: nginx
  rules:
    - host: collab.check-consulting.net # relier avec route53 sur AWS
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: front-app
                port:
                  number: 80
